<resources>
    <string name="app_name">El-Bazaar</string>
    <string name="create_a_new_account_now">Create a new account now!</string>
    <string name="el_bazaar">EL-BAZAAR</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm password</string>
    <string name="register">Register!</string>
    <string name="click_here_if_you_already_have_an_account">Click here if you already have an account</string>
    <string name="enter_phone_number">enter phone number</string>
    <string name="need_to_register_click_here">Need to register? Click here!</string>
    <string name="login">login</string>
    <string name="name">Name</string>
    <string name="log_out">Log out</string>
    <string name="welcome_back">Welcome Back!</string>
</resources>